[package]
name = "vigil-reporter"
version = "1.1.1"
description = "Vigil Reporter for Rust. Used in pair with Vigil, the Microservices Status Page."
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/valeriansaliou/rs-vigil-reporter"
repository = "https://github.com/valeriansaliou/rs-vigil-reporter.git"
keywords = ["vigil", "microservices", "monitoring", "integration"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[badges]
travis-ci = { repository = "valeriansaliou/rs-vigil-reporter", branch = "master" }

[lib]
name = "vigil_reporter"

[dependencies]
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
sys-info = "0.5"
reqwest = "0.8"

[dev-dependencies]
env_logger = "0.5"
