[package]
name = "vigil-reporter"
version = "1.2.1"
description = "Vigil Reporter for Rust. Used in pair with Vigil, the Microservices Status Page."
readme = "README.md"
license = "MIT"
edition = "2018"
homepage = "https://github.com/valeriansaliou/rs-vigil-reporter"
repository = "https://github.com/valeriansaliou/rs-vigil-reporter.git"
keywords = ["vigil", "microservices", "monitoring", "integration"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]

[lib]
name = "vigil_reporter"

[dependencies]
log = "0.4"
serde = { version = "1.0", default-features = false }
serde_derive = "1.0"
serde_json = "1.0"
sys-info = "0.9"
base64 = "0.21"
http_req = { version = "0.9", features = ["rust-tls"], default-features = false }

[dev-dependencies]
env_logger = "0.10"
